Fixing Tests