@@ -1,7 +1,9 @@
 package br.com.javastudies.sbrest.integrationtests.controller.withjson;
 
 import br.com.javastudies.sbrest.config.TestConfigs;
+import br.com.javastudies.sbrest.integrationtests.dto.AccountCredentialsDTO;
 import br.com.javastudies.sbrest.integrationtests.dto.BookDTO;
+import br.com.javastudies.sbrest.integrationtests.dto.TokenDTO;
 import br.com.javastudies.sbrest.integrationtests.dto.wrapper.json.book.WrapperBookDTO;
 import br.com.javastudies.sbrest.integrationtests.testcontainers.AbstractIntegrationTest;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -15,12 +17,11 @@ import io.restassured.specification.RequestSpecification;
 import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
-
 import java.util.Date;
-import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static junit.framework.TestCase.assertTrue;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
@@ -29,133 +30,150 @@ class BookControllerJsonTest extends AbstractIntegrationTest {
 
     private static RequestSpecification specification;
     private static ObjectMapper objectMapper;
+
     private static BookDTO book;
+    private static TokenDTO token;
 
     @BeforeAll
     static void setUp() {
         objectMapper = new ObjectMapper();
         objectMapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+
         book = new BookDTO();
+        token = new TokenDTO();
+    }
+
+    @Test
+    @Order(0)
+    void signin() {
+        AccountCredentialsDTO credentials =
+                new AccountCredentialsDTO("leandro", "admin123");
+
+        token = given()
+                .basePath("/auth/signin")
+                .port(TestConfigs.SERVER_PORT)
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .body(credentials)
+                .when()
+                .post()
+                .then()
+                .statusCode(200)
+                .extract()
+                .body()
+                .as(TokenDTO.class);
+
+
+        specification = new RequestSpecBuilder()
+                .addHeader(TestConfigs.HEADER_PARAM_ORIGIN, TestConfigs.ORIGIN_ERUDIO)
+                .addHeader(TestConfigs.HEADER_PARAM_AUTHORIZATION, "Bearer " + token.getAccessToken())
+                .setBasePath("/api/book")
+                .setPort(TestConfigs.SERVER_PORT)
+                .addFilter(new RequestLoggingFilter(LogDetail.ALL))
+                .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
+                .build();
+
+        Assertions.assertNotNull(token.getAccessToken());
+        Assertions.assertNotNull(token.getRefreshToken());
     }
 
     @Test
     @Order(1)
     void createTest() throws JsonProcessingException {
         mockBook();
-        specification = new RequestSpecBuilder()
-                .addHeader(TestConfigs.HEADER_PARAM_ORIGIN, TestConfigs.ORIGIN_ERUDIO)
-                .setBasePath("/api/book")
-                .setPort(TestConfigs.SERVER_PORT)
-                    .addFilter(new RequestLoggingFilter(LogDetail.ALL))
-                    .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
-                .build();
 
         var content = given(specification)
-            .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(book)
-            .when()
+                .when()
                 .post()
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
         BookDTO createdBook = objectMapper.readValue(content, BookDTO.class);
         book = createdBook;
 
-        assertNotNull(book.getId());
-        assertNotNull(createdBook.getId());
-
-        assertNotNull(createdBook.getAuthor());
-        assertNotNull(createdBook.getTitle());
-        assertNotNull(createdBook.getPrice());
-
-        assertTrue(createdBook.getId() > 0);
-
-        assertEquals("Nigel Poulton", createdBook.getAuthor());
-        assertEquals("Docker Deep Dive", createdBook.getTitle());
-        assertEquals(55.99, createdBook.getPrice());
+        Assertions.assertNotNull(createdBook.getId());
+        Assertions.assertNotNull(book.getId());
+        assertEquals("Docker Deep Dive", book.getTitle());
+        assertEquals("Nigel Poulton", book.getAuthor());
+        assertEquals(55.99, book.getPrice());
     }
 
     @Test
     @Order(2)
     void updateTest() throws JsonProcessingException {
-        book.setTitle("Docker Deep Dive - Updated");
 
-        // Usa a specification do teste anterior
+        // Usa a specification do anterior
+
+        book.setTitle("Docker Deep Dive - Updated");
 
         var content = given(specification)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-                    .body(book)
+                .body(book)
                 .when()
-                    .put()
+                .put()
                 .then()
-                    .statusCode(200)
-                    .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .statusCode(200)
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .extract()
-                    .body()
-                        .asString();
+                .body()
+                .asString();
 
         BookDTO createdBook = objectMapper.readValue(content, BookDTO.class);
         book = createdBook;
 
-        assertNotNull(book.getId());
-        assertNotNull(createdBook.getId());
+        Assertions.assertNotNull(createdBook.getId());
+        Assertions.assertTrue(createdBook.getId() > 0);
 
-        assertNotNull(createdBook.getAuthor());
-        assertNotNull(createdBook.getTitle());
-        assertNotNull(createdBook.getPrice());
-
-        assertTrue(createdBook.getId() > 0);
-
-        assertEquals("Nigel Poulton", createdBook.getAuthor());
-        assertEquals("Docker Deep Dive - Updated", createdBook.getTitle());
-        assertEquals(55.99, createdBook.getPrice());
+        Assertions.assertNotNull(createdBook.getId());
+        Assertions.assertNotNull(book.getId());
+        assertEquals("Docker Deep Dive - Updated", book.getTitle());
+        assertEquals("Nigel Poulton", book.getAuthor());
+        assertEquals(55.99, book.getPrice());
     }
 
     @Test
     @Order(3)
     void findByIdTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         var content = given(specification)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .pathParam("id", book.getId())
-            .when()
+                .when()
                 .get("{id}")
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
         BookDTO createdBook = objectMapper.readValue(content, BookDTO.class);
         book = createdBook;
 
-        assertNotNull(book.getId());
-        assertNotNull(createdBook.getId());
-        assertTrue(createdBook.getId() > 0);
+        Assertions.assertNotNull(createdBook.getId());
+        Assertions.assertTrue(createdBook.getId() > 0);
 
-        assertEquals("Docker Deep Dive - Updated", createdBook.getTitle());
-        assertEquals("Nigel Poulton", createdBook.getAuthor());
-        assertEquals(55.99, createdBook.getPrice());
+        Assertions.assertNotNull(createdBook.getId());
+        Assertions.assertNotNull(book.getId());
+        assertEquals("Docker Deep Dive - Updated", book.getTitle());
+        assertEquals("Nigel Poulton", book.getAuthor());
+        assertEquals(55.99, book.getPrice());
     }
 
     @Test
     @Order(4)
     void deleteTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         given(specification)
                 .pathParam("id", book.getId())
-            .when()
+                .when()
                 .delete("{id}")
-            .then()
+                .then()
                 .statusCode(204);
     }
 
@@ -163,52 +181,43 @@ class BookControllerJsonTest extends AbstractIntegrationTest {
     @Order(5)
     void findAllTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         var content = given(specification)
                 .accept(MediaType.APPLICATION_JSON_VALUE)
-                .queryParams("page", 0, "size", 12, "direction", "asc")
-            .when()
+                .queryParams("page", 9 , "size", 12, "direction", "asc")
+                .when()
                 .get()
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
+        // List<BookDTO> books = objectMapper.readValue(content, new TypeReference<List<BookDTO>>() {});
         WrapperBookDTO wrapper = objectMapper.readValue(content, WrapperBookDTO.class);
-        List<BookDTO> books = wrapper.getEmbedded().getBooks();
+        var books = wrapper.getEmbedded().getBooks();
 
-        BookDTO bookZero = books.get(0);
-        book = bookZero;
+        BookDTO bookOne = books.getFirst();
 
-        assertNotNull(bookZero.getId());
-        assertNotNull(bookZero.getAuthor());
-        assertNotNull(bookZero.getTitle());
-        assertNotNull(bookZero.getLaunchDate());
-        assertNotNull(bookZero.getPrice());
+        Assertions.assertNotNull(bookOne.getId());
+        Assertions.assertNotNull(bookOne.getTitle());
+        Assertions.assertNotNull(bookOne.getAuthor());
+        Assertions.assertNotNull(bookOne.getPrice());
+        Assertions.assertTrue(bookOne.getId() > 0);
+        assertEquals("The Art of Agile Development", bookOne.getTitle());
+        assertEquals("James Shore e Shane Warden", bookOne.getAuthor());
+        assertEquals(97.21, bookOne.getPrice());
 
-        assertTrue(bookZero.getId() > 0);
+        BookDTO foundBookSeven = books.get(7);
 
-        assertEquals("Big Data: como extrair volume, variedade, velocidade e valor da avalanche de informação cotidiana", bookZero.getTitle());
-        assertEquals("Viktor Mayer-Schonberger e Kenneth Kukier", bookZero.getAuthor());
-        assertEquals(54.00, bookZero.getPrice());
-
-        BookDTO bookFour =books.get(4);
-        book = bookFour;
-
-        assertNotNull(bookFour.getId());
-        assertNotNull(bookFour.getAuthor());
-        assertNotNull(bookFour.getTitle());
-        assertNotNull(bookFour.getLaunchDate());
-        assertNotNull(bookFour.getPrice());
-
-        assertTrue(bookFour.getId() > 0);
-
-        assertEquals("Domain Driven Design", bookFour.getTitle());
-        assertEquals("Eric Evans", bookFour.getAuthor());
-        assertEquals(92.00, bookFour.getPrice());
+        Assertions.assertNotNull(foundBookSeven.getId());
+        Assertions.assertNotNull(foundBookSeven.getTitle());
+        Assertions.assertNotNull(foundBookSeven.getAuthor());
+        Assertions.assertNotNull(foundBookSeven.getPrice());
+        Assertions.assertTrue(foundBookSeven.getId() > 0);
+        assertEquals("The Art of Computer Programming, Volume 1: Fundamental Algorithms", foundBookSeven.getTitle());
+        assertEquals("Donald E. Knuth", foundBookSeven.getAuthor());
+        assertEquals(139.69, foundBookSeven.getPrice());
     }
 
     private void mockBook() {
