@@ -1,8 +1,9 @@
 package br.com.javastudies.sbrest.integrationtests.controller.withxml;
 
 import br.com.javastudies.sbrest.config.TestConfigs;
+import br.com.javastudies.sbrest.integrationtests.dto.AccountCredentialsDTO;
 import br.com.javastudies.sbrest.integrationtests.dto.PersonDTO;
-import br.com.javastudies.sbrest.integrationtests.dto.wrapper.json.person.WrapperPersonDTO;
+import br.com.javastudies.sbrest.integrationtests.dto.TokenDTO;
 import br.com.javastudies.sbrest.integrationtests.dto.wrapper.xml_yaml.PagedModelPerson;
 import br.com.javastudies.sbrest.integrationtests.testcontainers.AbstractIntegrationTest;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -12,15 +13,18 @@ import io.restassured.builder.RequestSpecBuilder;
 import io.restassured.filter.log.LogDetail;
 import io.restassured.filter.log.RequestLoggingFilter;
 import io.restassured.filter.log.ResponseLoggingFilter;
+import io.restassured.path.xml.XmlPath;
+import io.restassured.response.Response;
 import io.restassured.specification.RequestSpecification;
 import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
-
 import java.util.List;
-
 import static io.restassured.RestAssured.given;
 import static junit.framework.TestCase.assertTrue;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
@@ -28,57 +32,86 @@ import static org.junit.jupiter.api.Assertions.*;
 class PersonControllerXmlTest extends AbstractIntegrationTest {
 
     private static RequestSpecification specification;
-    private static XmlMapper xmlMapper;
+    private static XmlMapper objectMapper;
+
     private static PersonDTO person;
+    private static TokenDTO token;
 
     @BeforeAll
     static void setUp() {
-        xmlMapper = new XmlMapper();
-        xmlMapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+        objectMapper = new XmlMapper();
+        objectMapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+
         person = new PersonDTO();
+        token = new TokenDTO();
+    }
+
+    @Test
+    @Order(0)
+    void signin() throws JsonProcessingException {
+        AccountCredentialsDTO credentials =
+                new AccountCredentialsDTO("leandro", "admin123");
+
+        var content = given()
+                .basePath("/auth/signin")
+                .port(TestConfigs.SERVER_PORT)
+                .contentType(MediaType.APPLICATION_XML_VALUE)
+                .accept(MediaType.APPLICATION_XML_VALUE)
+                .body(credentials)
+                .when()
+                .post()
+                .then()
+                .statusCode(200)
+                .extract()
+                .body()
+                .asString();
+
+        token = objectMapper.readValue(content, TokenDTO.class);
+
+        specification = new RequestSpecBuilder()
+                .addHeader(TestConfigs.HEADER_PARAM_ORIGIN, TestConfigs.ORIGIN_ERUDIO)
+                .addHeader(TestConfigs.HEADER_PARAM_AUTHORIZATION, "Bearer " + token.getAccessToken())
+                .setBasePath("/api/person")
+                .setPort(TestConfigs.SERVER_PORT)
+                .addFilter(new RequestLoggingFilter(LogDetail.ALL))
+                .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
+                .build();
+
+
+        Assertions.assertNotNull(token.getAccessToken());
+        Assertions.assertNotNull(token.getRefreshToken());
     }
 
     @Test
     @Order(1)
     void createTest() throws JsonProcessingException {
         mockPerson();
-        specification = new RequestSpecBuilder()
-                .addHeader(TestConfigs.HEADER_PARAM_ORIGIN, TestConfigs.ORIGIN_ERUDIO)
-                .setBasePath("/api/person")
-                .setPort(TestConfigs.SERVER_PORT)
-                    .addFilter(new RequestLoggingFilter(LogDetail.ALL))
-                    .addFilter(new ResponseLoggingFilter(LogDetail.ALL))
-                .build();
 
         var content = given(specification)
-            .contentType(MediaType.APPLICATION_XML_VALUE)
-            .accept(MediaType.APPLICATION_XML_VALUE)
+                .contentType(MediaType.APPLICATION_XML_VALUE)
+                .accept(MediaType.APPLICATION_XML_VALUE)
                 .body(person)
-            .when()
+                .when()
                 .post()
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
-        PersonDTO createdPerson = xmlMapper.readValue(content, PersonDTO.class);
+        PersonDTO createdPerson = objectMapper.readValue(content, PersonDTO.class);
         person = createdPerson;
 
-        assertNotNull(createdPerson.getId());
-        assertNotNull(createdPerson.getFirstName());
-        assertNotNull(createdPerson.getLastName());
-        assertNotNull(createdPerson.getAddress());
-        assertNotNull(createdPerson.getGender());
-
-        assertTrue(createdPerson.getId() > 0);
+        Assertions.assertNotNull(createdPerson.getId());
+        Assertions.assertTrue(createdPerson.getId() > 0);
 
         assertEquals("Linus", createdPerson.getFirstName());
-        assertEquals("Torvarlds", createdPerson.getLastName());
+        assertEquals("Torvalds", createdPerson.getLastName());
         assertEquals("Helsinki - Finland", createdPerson.getAddress());
         assertEquals("Male", createdPerson.getGender());
-        assertTrue(createdPerson.getEnabled());
+        Assertions.assertTrue(createdPerson.getEnabled());
+
     }
 
     @Test
@@ -86,104 +119,84 @@ class PersonControllerXmlTest extends AbstractIntegrationTest {
     void updateTest() throws JsonProcessingException {
         person.setLastName("Benedict Torvalds");
 
-        // Usa a specification do teste anterior
-
         var content = given(specification)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
                 .accept(MediaType.APPLICATION_XML_VALUE)
-                    .body(person)
+                .body(person)
                 .when()
-                    .put()
+                .put()
                 .then()
-                    .statusCode(200)
-                    .contentType(MediaType.APPLICATION_XML_VALUE)
+                .statusCode(200)
+                .contentType(MediaType.APPLICATION_XML_VALUE)
                 .extract()
-                    .body()
-                        .asString();
+                .body()
+                .asString();
 
-        PersonDTO createdPerson = xmlMapper.readValue(content, PersonDTO.class);
+        PersonDTO createdPerson = objectMapper.readValue(content, PersonDTO.class);
         person = createdPerson;
 
-        assertNotNull(createdPerson.getId());
-        assertNotNull(createdPerson.getFirstName());
-        assertNotNull(createdPerson.getLastName());
-        assertNotNull(createdPerson.getAddress());
-        assertNotNull(createdPerson.getGender());
-
-        assertTrue(createdPerson.getId() > 0);
+        Assertions.assertNotNull(createdPerson.getId());
+        Assertions.assertTrue(createdPerson.getId() > 0);
 
         assertEquals("Linus", createdPerson.getFirstName());
         assertEquals("Benedict Torvalds", createdPerson.getLastName());
         assertEquals("Helsinki - Finland", createdPerson.getAddress());
         assertEquals("Male", createdPerson.getGender());
-        assertTrue(createdPerson.getEnabled());
+        Assertions.assertTrue(createdPerson.getEnabled());
+
     }
 
     @Test
     @Order(3)
     void findByIdTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         var content = given(specification)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
                 .accept(MediaType.APPLICATION_XML_VALUE)
                 .pathParam("id", person.getId())
-            .when()
+                .when()
                 .get("{id}")
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
-        PersonDTO createdPerson = xmlMapper.readValue(content, PersonDTO.class);
+        PersonDTO createdPerson = objectMapper.readValue(content, PersonDTO.class);
         person = createdPerson;
 
-        assertNotNull(createdPerson.getId());
-        assertNotNull(createdPerson.getFirstName());
-        assertNotNull(createdPerson.getLastName());
-        assertNotNull(createdPerson.getAddress());
-        assertNotNull(createdPerson.getGender());
-
-        assertTrue(createdPerson.getId() > 0);
+        Assertions.assertNotNull(createdPerson.getId());
+        Assertions.assertTrue(createdPerson.getId() > 0);
 
         assertEquals("Linus", createdPerson.getFirstName());
         assertEquals("Benedict Torvalds", createdPerson.getLastName());
         assertEquals("Helsinki - Finland", createdPerson.getAddress());
         assertEquals("Male", createdPerson.getGender());
-        assertTrue(createdPerson.getEnabled());
+        Assertions.assertTrue(createdPerson.getEnabled());
     }
 
     @Test
     @Order(4)
-    void disablePersonTest() throws JsonProcessingException {
-
-        // Usa a specification do teste anterior
+    void disableTest() throws JsonProcessingException {
 
         var content = given(specification)
                 .accept(MediaType.APPLICATION_XML_VALUE)
                 .pathParam("id", person.getId())
-            .when()
+                .when()
                 .patch("{id}")
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
-        PersonDTO createdPerson = xmlMapper.readValue(content, PersonDTO.class);
+        PersonDTO createdPerson = objectMapper.readValue(content, PersonDTO.class);
         person = createdPerson;
 
-        assertNotNull(createdPerson.getId());
-        assertNotNull(createdPerson.getFirstName());
-        assertNotNull(createdPerson.getLastName());
-        assertNotNull(createdPerson.getAddress());
-        assertNotNull(createdPerson.getGender());
-
-        assertTrue(createdPerson.getId() > 0);
+        Assertions.assertNotNull(createdPerson.getId());
+        Assertions.assertTrue(createdPerson.getId() > 0);
 
         assertEquals("Linus", createdPerson.getFirstName());
         assertEquals("Benedict Torvalds", createdPerson.getLastName());
@@ -196,77 +209,60 @@ class PersonControllerXmlTest extends AbstractIntegrationTest {
     @Order(5)
     void deleteTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         given(specification)
                 .pathParam("id", person.getId())
-            .when()
+                .when()
                 .delete("{id}")
-            .then()
+                .then()
                 .statusCode(204);
     }
+
 
     @Test
     @Order(6)
     void findAllTest() throws JsonProcessingException {
 
-        // Usa a specification do teste anterior
-
         var content = given(specification)
                 .accept(MediaType.APPLICATION_XML_VALUE)
                 .queryParams("page", 3, "size", 12, "direction", "asc")
-            .when()
+                .when()
                 .get()
-            .then()
+                .then()
                 .statusCode(200)
                 .contentType(MediaType.APPLICATION_XML_VALUE)
-            .extract()
+                .extract()
                 .body()
-                    .asString();
+                .asString();
 
-        PagedModelPerson wrapper = xmlMapper.readValue(content, PagedModelPerson.class);
+        PagedModelPerson wrapper = objectMapper.readValue(content, PagedModelPerson.class);
         List<PersonDTO> people = wrapper.getContent();
 
-        PersonDTO personZero = people.get(0);
-        person = personZero;
+        PersonDTO personOne = people.getFirst();
 
-        assertNotNull(personZero.getId());
-        assertNotNull(personZero.getFirstName());
-        assertNotNull(personZero.getLastName());
-        assertNotNull(personZero.getAddress());
-        assertNotNull(personZero.getGender());
+        Assertions.assertNotNull(personOne.getId());
+        Assertions.assertTrue(personOne.getId() > 0);
 
-        assertTrue(personZero.getId() > 0);
-
-        assertEquals("Allie", personZero.getFirstName());
-        assertEquals("Grigoletti", personZero.getLastName());
-        assertEquals("Room 1711", personZero.getAddress());
-        assertEquals("Female", personZero.getGender());
-        assertFalse(personZero.getEnabled());
+        assertEquals("Allin", personOne.getFirstName());
+        assertEquals("Emmot", personOne.getLastName());
+        assertEquals("7913 Lindbergh Way", personOne.getAddress());
+        assertEquals("Male", personOne.getGender());
+        assertFalse(personOne.getEnabled());
 
         PersonDTO personFour = people.get(4);
-        person = personFour;
 
-        assertNotNull(personFour.getId());
-        assertNotNull(personFour.getFirstName());
-        assertNotNull(personFour.getLastName());
-        assertNotNull(personFour.getAddress());
-        assertNotNull(personFour.getGender());
+        Assertions.assertNotNull(personFour.getId());
+        Assertions.assertTrue(personFour.getId() > 0);
 
-        assertTrue(personFour.getId() > 0);
-
-        assertEquals("Alonzo", personFour.getFirstName());
-        assertEquals("Dorning", personFour.getLastName());
-        assertEquals("18th Floor", personFour.getAddress());
+        assertEquals("Alonso", personFour.getFirstName());
+        assertEquals("Luchelli", personFour.getLastName());
+        assertEquals("9 Doe Crossing Avenue", personFour.getAddress());
         assertEquals("Male", personFour.getGender());
         assertFalse(personFour.getEnabled());
     }
 
     @Test
     @Order(7)
-    void findByName() throws JsonProcessingException {
-
-        // Usa a specification do teste anterior
+    void findByNameTestTest() throws JsonProcessingException {
 
         var content = given(specification)
                 .accept(MediaType.APPLICATION_XML_VALUE)
@@ -281,49 +277,98 @@ class PersonControllerXmlTest extends AbstractIntegrationTest {
                 .body()
                 .asString();
 
-        PagedModelPerson wrapper = xmlMapper.readValue(content, PagedModelPerson.class);
+        PagedModelPerson wrapper = objectMapper.readValue(content, PagedModelPerson.class);
         List<PersonDTO> people = wrapper.getContent();
 
-        PersonDTO personZero = people.get(0);
-        person = personZero;
+        PersonDTO personOne = people.getFirst();
 
-        assertNotNull(personZero.getId());
-        assertNotNull(personZero.getFirstName());
-        assertNotNull(personZero.getLastName());
-        assertNotNull(personZero.getAddress());
-        assertNotNull(personZero.getGender());
+        Assertions.assertNotNull(personOne.getId());
+        Assertions.assertTrue(personOne.getId() > 0);
 
-        assertTrue(personZero.getId() > 0);
-
-        assertEquals("Alejandrina", personZero.getFirstName());
-        assertEquals("Arnoud", personZero.getLastName());
-        assertEquals("Room 465", personZero.getAddress());
-        assertEquals("Female", personZero.getGender());
-        assertTrue(personZero.getEnabled());
+        assertEquals("Alessandro", personOne.getFirstName());
+        assertEquals("McFaul", personOne.getLastName());
+        assertEquals("5 Lukken Plaza", personOne.getAddress());
+        assertEquals("Male", personOne.getGender());
+        Assertions.assertTrue(personOne.getEnabled());
 
         PersonDTO personFour = people.get(4);
-        person = personFour;
 
-        assertNotNull(personFour.getId());
-        assertNotNull(personFour.getFirstName());
-        assertNotNull(personFour.getLastName());
-        assertNotNull(personFour.getAddress());
-        assertNotNull(personFour.getGender());
+        Assertions.assertNotNull(personFour.getId());
+        Assertions.assertTrue(personFour.getId() > 0);
 
-        assertTrue(personFour.getId() > 0);
-
-        assertEquals("Andreas", personFour.getFirstName());
-        assertEquals("Duggary", personFour.getLastName());
-        assertEquals("13th Floor", personFour.getAddress());
+        assertEquals("Brandyn", personFour.getFirstName());
+        assertEquals("Grasha", personFour.getLastName());
+        assertEquals("96 Mosinee Parkway", personFour.getAddress());
         assertEquals("Male", personFour.getGender());
-        assertTrue(personFour.getEnabled());
+        Assertions.assertTrue(personFour.getEnabled());
+    }
+
+    @Test
+    @Order(8)
+    void hateoasAndHalTest() throws JsonProcessingException {
+
+        Response response = (Response) given(specification)
+                .accept(MediaType.APPLICATION_XML_VALUE)
+                .queryParams("page", 3, "size", 12, "direction", "asc")
+                .when()
+                .get()
+                .then()
+                .statusCode(200)
+                .contentType(MediaType.APPLICATION_XML_VALUE)
+                .extract()
+                .body();
+
+        // Retrieves the response body as an XML string
+        String xml = response.getBody().asString();
+
+        // Uses XmlPath to perform validations on the XML
+        XmlPath xmlPath = new XmlPath(xml);
+
+        // Attempts to get the list of links as a list of strings, not maps
+        List<String> peopleLinks = xmlPath.getList("PagedModel.content.content.links.href");
+
+        // Iterates through each link and performs validations
+        for (String link : peopleLinks) {
+            // Checks if the URL is in the correct format
+            assertThat("HATEOAS/HAL link " + link + " has an invalid URL", link, matchesPattern("https?://.+/api/person/v1.*"));
+
+            // Ensures the URL is not null
+            assertThat("HATEOAS/HAL link " + link + " has a null URL", notNullValue());
+        }
+
+        // Validates the navigation links of the page
+        List<String> pageLinks = xmlPath.getList("PagedModel.links.href");
+        for (String pageLink: pageLinks) {
+            // Checks if the navigation links are in the correct format
+            assertThat("HATEOAS/HAL pageLink " + pageLink + " has an invalid URL", pageLink, matchesPattern("https?://.+/api/person/v1.*"));
+
+            // Ensures the URL is not null
+            assertThat("HATEOAS/HAL pageLink " + pageLink + " has a null URL", notNullValue());
+        }
+        // Validates the attributes related to pagination in the XML
+        String size = xmlPath.getString("PagedModel.page.size");
+        String totalElements = xmlPath.getString("PagedModel.page.totalElements");
+        String totalPages = xmlPath.getString("PagedModel.page.totalPages");
+        String number = xmlPath.getString("PagedModel.page.number");
+
+        // Verifies the page size (12 items)
+        assertThat(Integer.parseInt(size), is(12));
+
+        // Verifies the current page number (3)
+        assertThat(Integer.parseInt(number), is(3));
+
+        // Checks if the attributes 'totalElements' and 'totalPages' are greater than zero
+        Assertions.assertTrue(Integer.parseInt(totalElements) > 0, "totalElements should be greater than 0");
+        Assertions.assertTrue(Integer.parseInt(totalPages) > 0, "totalPages should be greater than 0");
     }
 
     private void mockPerson() {
         person.setFirstName("Linus");
-        person.setLastName("Torvarlds");
+        person.setLastName("Torvalds");
         person.setAddress("Helsinki - Finland");
         person.setGender("Male");
         person.setEnabled(true);
+        person.setProfileUrl("https://pub.erudio.com.br/meus-cursos");
+        person.setPhotoUrl("https://pub.erudio.com.br/meus-cursos");
     }
 }
