@@ -13,12 +13,11 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import static junit.framework.TestCase.assertTrue;
 import static org.junit.jupiter.api.Assertions.*;
 
-@ExtendWith(SpringExtension.class) // Integra Spring Framework com JUNIT5
-@DataJpaTest // Configura o teste para trabalhar com JPA
-@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE) // Impede que o DataJPATests substitua a config do banco do projeto pelo embutido
+@ExtendWith(SpringExtension.class)
+@DataJpaTest
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class PersonRepositoryTest extends AbstractIntegrationTest {
 
@@ -33,26 +32,25 @@ class PersonRepositoryTest extends AbstractIntegrationTest {
 
     @Test
     @Order(1)
-    void disablePerson() {
+    void findPeopleByName() {
+        Pageable pageable = PageRequest.of(
+                0,
+                12,
+                Sort.by(Sort.Direction.ASC, "firstName"));
 
-        Pageable pageable = PageRequest.of(0, 12, Sort.Direction.ASC, "firstName");
-        person = repository.findPeopleByName("ariana", pageable).getContent().get(0);
+        person = repository.findPeopleByName("iko", pageable).getContent().getFirst();
 
         assertNotNull(person);
         assertNotNull(person.getId());
-
-        assertEquals("Mariana", person.getFirstName());
-        assertEquals("Costa", person.getLastName());
-        assertEquals("Brasil", person.getAddress());
-        assertEquals("Female", person.getGender());
-        Assertions.assertTrue(person.getEnabled());
-
-
+        assertEquals("Nikola", person.getFirstName());
+        assertEquals("Tesla", person.getLastName());
+        assertEquals("Male", person.getGender());
+        assertTrue(person.getEnabled());
     }
 
-    @Order(2)
     @Test
-    void findPeopleByName() {
+    @Order(2)
+    void disablePerson() {
 
         Long id = person.getId();
         repository.disablePerson(id);
@@ -62,11 +60,9 @@ class PersonRepositoryTest extends AbstractIntegrationTest {
 
         assertNotNull(person);
         assertNotNull(person.getId());
-
-        assertEquals("Mariana", person.getFirstName());
-        assertEquals("Costa", person.getLastName());
-        assertEquals("Brasil", person.getAddress());
-        assertEquals("Female", person.getGender());
-        Assertions.assertFalse(person.getEnabled());
+        assertEquals("Nikola", person.getFirstName());
+        assertEquals("Tesla", person.getLastName());
+        assertEquals("Male", person.getGender());
+        assertFalse(person.getEnabled());
     }
 }
